@@ -1,6 +1,6 @@
 use Test::More tests => 8;
 
-use Clutter;
+use Clutter '-init';
 
 my $group = Clutter::Group->new;
 isa_ok($group, 'Clutter::Group', 'check ISA');
